2004-06-15  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/box_data_list.cc: Corrected problems with the 
	AddDel changes: Adding a record works again, and editing a list record 
	shows the correct record in the Details view.

2004-06-15  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/adddel.[h|cc]: add_item(), remove_item(), 
	get_row() now use a key value instead of the value in the first column.
	This is a hidden TreeModel column. There is also a bool placeholder 
	column, used to mark the blank row that is for the user to add a new 
	row. This scheme should make it easier to handle reorderered rows, and 
	it allows us to get a unique identifier for a changed row even when 
	responding to a change an it is the first row (such as a field name) 
	that has changed.

2004-06-14  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/adddel.[h|cc]: The API now uses Gtk::TreeModel
	iterators instead of integer indexes. The previous API was an 
	abstraction layer that is no longer required now that we have 
	Gtk::TreeView and plan to keep using it.
	* other files: Adapted accordingly.

0.8.1:

2004-06-12  Murray Cumming  <murrayc@murrayc.com>

	* glom/application.cc: show_hint(): Do not show the help hints at the 
	bottom - they are just annoying and not really necessary anymore.
	
2004-06-12  Murray Cumming  <murrayc@murrayc.com>

	* glom/data_structure/glomconversions.cc: Simplify the time_get and 
	time_put code by using the default template iterators.
	
2004-06-12  Murray Cumming  <murrayc@murrayc.com>

	* glom/data_structure/glomconversions.cc: Various corrections from 
	Daniel Elstner (king of C++). Also fallback to parsing time in the C 
	locale, because parsing in the current locale never seems to work.
	* glom/utility_widgets/adddel/adddel.cc: on_treeview_celledited(),
	  glom/utility)widgets/entryglom: check_changed(): Update the entry 
	with the text as it would be displayed in the locale, after editing, 