@@ -1,5 +1,10 @@
 2004-06-15  Murray Cumming  <murrayc@murrayc.com>
 
+	* glom/navigation/box_tables.cc: on_AddDel_changed(): Implement 
+	renaming of tables.
+
+2004-06-15  Murray Cumming  <murrayc@murrayc.com>
+
 	* glom/mode_data/box_data_list.cc: Corrected problems with the 
 	AddDel changes: Adding a record works again, and editing a list record 
 	shows the correct record in the Details view.
